force-app/main/default/objects/SA_COE_Bid_Period__c/SA_COE_Bid_Period__c.object-meta.xml
<CustomObject>
    <label>SA COE Bid Period</label>
    <nameField>
        <displayFormat>SACBP-{0000000}</displayFormat>
        <label>SA COE Bid Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SA COE Bid Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>