force-app/main/default/objects/SA_COE_Bid_Period__c/fields/Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bid_Amount__c</fullName>
    <label>Bid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>