force-app/main/default/objects/SA_COE_Bid_Period__c/fields/MB_Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>MB_Sales_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MB Sales Agreement</label>
    <referenceTo>MB_Sales_Agreement__c</referenceTo>
    <relationshipLabel>SA COE Bid Periods</relationshipLabel>
    <relationshipName>SA_COE_Bid_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>